<resources>
    <string name="app_name">Journal</string>
    <string name="title_text">Self Gratitude Journal</string>
    <string name="grateful_text">What are you grateful for today</string>
    <string name="get_started_text">Get Started</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="or_text">or</string>
    <string name="create_text">Create Account</string>
    <string name="username_hint">Username</string>
    <string name="title_hint">Title</string>
    <string name="your_thoughts_placeholder">Your Thoughts....</string>
    <string name="save_text">Save</string>
    <string name="menu_title">Add Thoughts</string>
    <string name="signout">Signout</string>
    <string name="no_thoughts">Write a Journal Entry by clicking the \"+\" icon</string>
    <string name="placeholder_title">Title</string>
    <string name="placeholder_thoughts">Thoughts</string>
    <string name="placeholder_date">Date Created</string>
    <string name="journal_image">journalImage</string>
    <string name="placeholder_name">Anuraag</string>
    <string name="share_button">Share Button</string>
</resources>