<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:elevation="10dp">

        <TextView
            android:id="@+id/journal_row_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/placeholder_name"
            android:textSize="17sp" />

        <ImageButton
            android:id="@+id/journal_row_share_button"
            android:src="@android:drawable/ic_menu_share"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/share_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/journal_image_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/journal_image"
            android:cropToPadding="true"
            android:scaleType="fitXY"
            android:src="@drawable/image_3" />

        <TextView
            android:id="@+id/journal_title_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/placeholder_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/journal_thoughts_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/placeholder_thoughts"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/journal_timestamp_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/placeholder_date"
            android:textStyle="italic" />


    </LinearLayout>

</androidx.cardview.widget.CardView>